discussion/kv_engine/177280/177280_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52080: Extend CheckpointMemoryTrackingTest suite for non-SSO case

Change-Id: Iabe48a17d622d3ce7d01e80a1d88dc3daa870ab3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-07-08 11:50:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-07-08 11:51:56.000000000
Message: 
Set Ready For Review
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-08 11:54:57.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18877/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3885:26: error: use of undeclared identifier "longKeyLength" [clang-diagnostic-error]
    const auto keySize = longKeyLength;
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18877/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3885:26:
error: use of undeclared identifier "longKeyLength" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18877/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18035/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-08 12:00:07.000000000
Message: 
Patch Set 1: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47691/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8561/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20777/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20777/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21824/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21824/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8658/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8658/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29176/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21136/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20019/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20019/ )
----------------------------------------------------------------------------------------------------------------------
